[package]
name = "p99"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
] }
tower = { version = "0.5.2", features = [
    "limit",
    "buffer",
    "timeout",
    "load-shed",
] }
tower-http = { version = "0.6.6", features = ["trace", "request-id", "cors"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
moka = { version = "0.12.10", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
hdrhistogram = "7.5.4"
rand = "0.9.2"
once_cell = "1.21.3"
thiserror = "2.0.16"
anyhow = "1.0.99"
dashmap = "6.1.0"
hyper = { version = "1.7.0", features = ["client", "http1"] }
http = "1.3.1"
bytes = "1.10.1"
uuid = { version = "1.18.1", features = ["v4"] }
mimalloc = "0.1.48"
futures = "0.3"
chrono = "0.4.41"
